--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -20,3 +20,25 @@ $hero-darken: $dark !default;
 .gh-sponsor {
   color: #ea4aaa;
 }
+
+body {
+  color: #000000; 
+}
+
+.content h1, .content h2, .content h3, .content h4, .content h5, .content h6 {
+  color: #000000;
+}
+
+/*
+.menu {
+  position: sticky;
+  display: inline-block;
+  vertical-align: top;
+  max-height: 100vh;
+  overflow-y: auto;
+  top: 0;
+  bottom: 0;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+*/
